--- a/src/container/ChooseRicoz/ChooseRicoz.css
+++ b/src/container/ChooseRicoz/ChooseRicoz.css
@@ -1,10 +1,11 @@
 .whychoosericoz{
-    height: 700px;
+    height: auto;
     background: #14121D;
     padding: 2rem 5rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    overflow-x: hidden;
 }
 .whychoosericoz .whychoosericoz_heading{
     text-align: center;
@@ -73,7 +74,20 @@ height: 60px;
     font-weight: 400;
     line-height: 20px;
     letter-spacing: 0em;
-    text-align: left;
-    width: 498px;   
+    text-align: left;  
     color: white; 
+}
+
+@media screen and (max-Width:1050px){
+    .whychoosericoz .whychoosericoz_content{
+        flex-direction: column;
+    }
+    .whychoosericoz .whychoosericoz_image{
+        width: 100%;
+    }
+    .whychoosericoz .whychoosericoz_text{
+        width: 100%;
+        padding: 1rem;
+    }
+
 }
