--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Manrope:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lexend:wght@500&display=swap');
 .footer{
-    height: 500px;
+    height: auto;
     background-image:linear-gradient(#181623,#17245B);
     padding: 4rem;
+    overflow-x: hidden;
 }
 .footer .footer-item-heading{
 font-family: Manrope;
@@ -69,4 +70,18 @@ color: #eeeeee;
     color: #eeeeee;
 
 
+}
+
+
+@media screen and (max-Width:1050px){
+    .footer-items ul{
+        flex-direction: column;
+    }
+    .social-icons{
+        width: 20%;
+    }
+
+}
+@media screen and (max-Width:700px){
+    
 }
