--- a/src/container/WorkFlow/WorkFlow.css
+++ b/src/container/WorkFlow/WorkFlow.css
@@ -1,6 +1,6 @@
 .workflow{
     width: 100%;
-    height: 1023px;
+    height: auto;
     background: #FFFFFF;
     padding: 3rem 5rem;
     position: relative;
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-
+    overflow-x: hidden;
 
 }
 .workflow .workflow-heading{
@@ -64,6 +64,7 @@ white-space: nowrap;
     top: 55%;
     left: 50%;
     transform: translate(-50%,-50%);
+    width: 25%;
 }
 
 .workflow_explore-tools{
@@ -91,4 +92,28 @@ letter-spacing: 0em;
 color: #ffffff;
 
 
+}
+
+@media screen and (max-Width:1050px){
+    .center-image{
+        width: 15%;
+    }
+    .workflow .center-image{
+        top: 60%;
+    }
+    .workflow-box-part{
+        gap: 5rem;
+    }
+
+}
+@media screen and (max-Width:700px){
+    .center-image{
+        display: none;
+    }
+    
+    
+.workflow-box-part{
+    flex-direction: column;
+    gap: 1rem;
+}
 }
